// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display 1`] = `
"<nav class=\\"navbar navbar-expand-lg fixed-top\\">
  <div class=\\"container-fluid\\">
    <div class=\\"logo\\">
      <a href=\\"\\">
        <img src=\\"/images/logo-dark.png\\" alt=\\"logo\\">
      </a>
    </div>
    <!--0-->
    <div class=\\"collapse navbar-collapse\\">
      <ul class=\\"navbar-nav ml-auto mr-auto\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link active\\" href=\\"\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/contact/\\">Contact</a>
        </li>
      </ul>
    </div>
    <div class=\\"navbar-right ml-auto\\">
      <div class=\\"theme-switch-wrapper\\">
        <label class=\\"theme-switch\\" for=\\"checkbox\\">
          <input type=\\"checkbox\\" id=\\"checkbox\\">
          <div class=\\"slider round\\"></div>
        </label>
      </div>
      <!--1-->
      <div class=\\"search-icon\\">
        <i class=\\"icon-search\\"></i>
      </div>
      <button class=\\"navbar-toggler\\" type=\\"button\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\"><span class=\\"navbar-toggler-icon\\"></span></button>
    </div>
  </div>
</nav>
<!--0-->
<div data-test-page-body=\\"\\">
  <section class=\\"section pt-55\\">
    <!--0-->
    <!--1-->
    <div class=\\"container-fluid\\">
      <div class=\\"row\\">
        <div class=\\"col-lg-4 col-md-6\\">
          <div class=\\"post-card\\">
            <div class=\\"post-card-content\\">
              <a class=\\"categorie\\" href=\\"/category/pervya/1/\\">Первая</a>
              <h5>
                <a href=\\"/pervya-testovaya-statya\\">Первая тестовая статья</a>
              </h5>
              <p>Short content</p>
              <div class=\\"post-card-info\\">
                <ul class=\\"list-inline\\">
                  <li>среда, 25 мая 2022 г., 02:54:20</li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <!--0-->
        <!--2-->
        <div class=\\"col-lg-12\\">
          <div class=\\"pagination mt--10\\">
            <ul class=\\"list-inline\\">
              <!--0-->
              <li>
                <a data-test-page=\\"1\\" class=\\"active\\" href=\\"/page/1/\\">1</a>
              </li>
              <!--1-->
              <!--0-->
              <li>
                <a data-test-page=\\"2\\" class=\\"\\" href=\\"/page/2/\\">2</a>
              </li>
              <!--1-->
              <!--0-->
              <li>
                <a data-test-page=\\"3\\" class=\\"\\" href=\\"/page/3/\\">3</a>
              </li>
              <!--1-->
              <!--0-->
              <li>
                <a data-test-page=\\"4\\" class=\\"\\" href=\\"/page/4/\\">4</a>
              </li>
              <!--1-->
              <!--0-->
              <li>
                <a data-test-page=\\"5\\" class=\\"\\" href=\\"/page/5/\\">5</a>
              </li>
              <!--1-->
            </ul>
          </div>
        </div>
      </div>
    </div>
  </section>
  <!--0-->
</div>
<!--0-->
<!--0-->
<!--0-->
<!--0-->
<!--1-->
<footer class=\\"footer\\">
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col-lg-12\\">
        <div class=\\"back\\">
          <a href=\\"#\\" class=\\"back-top\\">
            <i class=\\"icon-up\\"></i>
          </a>
        </div>
      </div>
    </div>
  </div>
</footer>
<!--2-->
<!--3-->
<!--0-->
<!--0-->"
`;

exports[`ssr & rehydrate 1`] = `
"<nav class=\\"navbar navbar-expand-lg fixed-top\\">
  <div class=\\"container-fluid\\">
    <div class=\\"logo\\">
      <a href=\\"\\">
        <img src=\\"/images/logo-dark.png\\" alt=\\"logo\\">
      </a>
    </div>
    <!--0-->
    <div class=\\"collapse navbar-collapse\\">
      <ul class=\\"navbar-nav ml-auto mr-auto\\">
        <li class=\\"nav-item\\">
          <a href=\\"\\" class=\\"nav-link active\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a href=\\"/contact/\\" class=\\"nav-link\\">Contact</a>
        </li>
      </ul>
    </div>
    <div class=\\"navbar-right ml-auto\\">
      <div class=\\"theme-switch-wrapper\\">
        <label for=\\"checkbox\\" class=\\"theme-switch\\">
          <input type=\\"checkbox\\" id=\\"checkbox\\">
          <div class=\\"slider round\\"></div>
        </label>
      </div>
      <!--1-->
      <div class=\\"search-icon\\">
        <i class=\\"icon-search\\"></i>
      </div>
      <button type=\\"button\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\" class=\\"navbar-toggler\\"><span class=\\"navbar-toggler-icon\\"></span></button>
    </div>
  </div>
</nav>
<!--0-->
<div data-test-page-body=\\"\\">
  <section class=\\"section pt-55\\">
    <!--0-->
    <!--1-->
    <div class=\\"container-fluid\\">
      <div class=\\"row\\">
        <div class=\\"col-lg-4 col-md-6\\">
          <div class=\\"post-card\\">
            <div class=\\"post-card-content\\">
              <a href=\\"/category/pervya/1/\\" class=\\"categorie\\">Первая</a>
              <h5>
                <a href=\\"/pervya-testovaya-statya\\">Первая тестовая статья</a>
              </h5>
              <p>Short content</p>
              <div class=\\"post-card-info\\">
                <ul class=\\"list-inline\\">
                  <li>среда, 25 мая 2022 г., 02:54:20</li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <!--0-->
        <!--2-->
        <div class=\\"col-lg-12\\">
          <div class=\\"pagination mt--10\\">
            <ul class=\\"list-inline\\">
              <!--0-->
              <li>
                <a data-test-page=\\"1\\" href=\\"/page/1/\\" class=\\"active\\">1</a>
              </li>
              <!--1-->
              <!--0-->
              <li>
                <a data-test-page=\\"2\\" href=\\"/page/2/\\" class=\\"\\">2</a>
              </li>
              <!--1-->
              <!--0-->
              <li>
                <a data-test-page=\\"3\\" href=\\"/page/3/\\" class=\\"\\">3</a>
              </li>
              <!--1-->
              <!--0-->
              <li>
                <a data-test-page=\\"4\\" href=\\"/page/4/\\" class=\\"\\">4</a>
              </li>
              <!--1-->
              <!--0-->
              <li>
                <a data-test-page=\\"5\\" href=\\"/page/5/\\" class=\\"\\">5</a>
              </li>
              <!--1-->
            </ul>
          </div>
        </div>
      </div>
    </div>
  </section>
  <!--0-->
</div>
<!--0-->
<!--0-->
<!--0-->
<!--0-->
<!--1-->
<footer class=\\"footer\\">
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col-lg-12\\">
        <div class=\\"back\\">
          <a href=\\"#\\" class=\\"back-top\\">
            <i class=\\"icon-up\\"></i>
          </a>
        </div>
      </div>
    </div>
  </div>
</footer>
<!--2-->
<!--3-->
<!--0-->
<!--0-->
<script>
  window.data = {
    \\"0\\": {
      \\"C\\": [\\"1\\"],
      \\"N\\": [11]
    },
    \\"1\\": {
      \\"C\\": [\\"2\\", \\"6\\", \\"7\\"],
      \\"N\\": [1, 7, 9, 10]
    },
    \\"2\\": {
      \\"C\\": [\\"3\\", \\"4\\", \\"5\\"],
      \\"N\\": [0, [0, 0],
        [0, 0, 1],
        [0, 0, 2],
        [0, 0, 3],
        [0, 0, 3, 1],
        [0, 0, 3, 2],
        [0, 0, 3, 2, 0],
        [0, 0, 3, 3],
        [0, 0, 3, 3, 0]
      ]
    },
    \\"3\\": {
      \\"N\\": [0, [0, 0],
        [0, 0, 0]
      ]
    },
    \\"4\\": {
      \\"N\\": [0, [0, 0],
        [0, 0, 0],
        [0, 0, 0, 0],
        [0, 1],
        [0, 1, 0],
        [0, 1, 0, 0]
      ]
    },
    \\"5\\": {
      \\"N\\": [0, [0, 0],
        [0, 0, 0],
        [0, 0, 1]
      ]
    },
    \\"6\\": {
      \\"N\\": [8, [8, 0],
        [8, 0, 0],
        [8, 0, 0, 0],
        [8, 0, 0, 0, 0],
        [8, 0, 0, 0, 0, 0],
        [8, 0, 0, 0, 0, 0, 0]
      ]
    },
    \\"7\\": {
      \\"C\\": [\\"8\\"],
      \\"N\\": [6]
    },
    \\"8\\": {
      \\"C\\": [\\"9\\"]
    },
    \\"9\\": {
      \\"C\\": [\\"10\\"],
      \\"N\\": [5]
    },
    \\"10\\": {
      \\"O\\": {
        \\"dataLoaded\\": true,
        \\"errors\\": [],
        \\"limit\\": 20,
        \\"total\\": 100,
        \\"articles\\": [{}]
      },
      \\"C\\": [\\"11\\"],
      \\"N\\": [4]
    },
    \\"11\\": {
      \\"C\\": [\\"14\\"],
      \\"N\\": [3]
    },
    \\"14\\": {
      \\"C\\": [\\"15\\"],
      \\"N\\": [2, [2, 1]]
    },
    \\"15\\": {
      \\"C\\": [\\"16\\", \\"17\\"],
      \\"N\\": [0, [0, 0],
        [0, 1],
        [0, 2],
        [0, 2, 0],
        [0, 2, 0, 2],
        [0, 2, 0, 3]
      ]
    },
    \\"16\\": {
      \\"C\\": [\\"23\\"],
      \\"N\\": [1]
    },
    \\"17\\": {
      \\"C\\": [\\"18\\", \\"19\\", \\"20\\", \\"21\\", \\"22\\"],
      \\"N\\": [0, [0, 0]]
    },
    \\"18\\": {
      \\"N\\": [0, 1, [1, 0],
        [1, 0, 0], 2
      ]
    },
    \\"19\\": {
      \\"N\\": [3, 4, [4, 0],
        [4, 0, 0], 5
      ]
    },
    \\"20\\": {
      \\"N\\": [6, 7, [7, 0],
        [7, 0, 0], 8
      ]
    },
    \\"21\\": {
      \\"N\\": [9, 10, [10, 0],
        [10, 0, 0], 11
      ]
    },
    \\"22\\": {
      \\"N\\": [12, 13, [13, 0],
        [13, 0, 0], 14
      ]
    },
    \\"23\\": {
      \\"N\\": [0, [0, 0],
        [0, 0, 0],
        [0, 0, 0, 0],
        [0, 0, 0, 0, 0],
        [0, 0, 0, 1],
        [0, 0, 0, 1, 0],
        [0, 0, 0, 1, 0, 0],
        [0, 0, 0, 2],
        [0, 0, 0, 2, 0],
        [0, 0, 0, 3],
        [0, 0, 0, 3, 0],
        [0, 0, 0, 3, 0, 0],
        [0, 0, 0, 3, 0, 0, 0]
      ]
    },
    \\"app\\": {
      \\"C\\": [\\"0\\"],
      \\"N\\": [12]
    }
  };
</script>
<script src=\\"/s.min.js\\"></script>
<script>
  System.import('/bundle.js');
</script>"
`;

exports[`ssr 1`] = `
"<!doctype html>
<html>

  <head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta name=\\"theme-color\\" content=\\"\\">
    <link rel=\\"icon\\" href=\\"/favicon.ico\\">
    <title>{{ logoText }} | Home</title>
    <link rel=\\"stylesheet\\" href=\\"/bundle.css\\" />
  </head>

  <body class=\\"animation-stopped\\">
    <nav class=\\"navbar navbar-expand-lg fixed-top\\">
      <div class=\\"container-fluid\\">
        <div class=\\"logo\\">
          <a href=\\"\\">
            <img src=\\"/images/logo-dark.png\\" alt=\\"logo\\">
            </img>
          </a>
        </div>
        <!--0-->
        <div class=\\"collapse navbar-collapse\\">
          <ul class=\\"navbar-nav ml-auto mr-auto\\">
            <li class=\\"nav-item\\">
              <a href=\\"\\" class=\\"nav-link active\\">Home</a>
            </li>
            <li class=\\"nav-item\\">
              <a href=\\"/contact/\\" class=\\"nav-link\\">Contact</a>
            </li>
          </ul>
        </div>
        <div class=\\"navbar-right ml-auto\\">
          <div class=\\"theme-switch-wrapper\\">
            <label for=\\"checkbox\\" class=\\"theme-switch\\">
              <input type=\\"checkbox\\" id=\\"checkbox\\">
              <div class=\\"slider round\\"></div>
            </label>
          </div>
          <!--1-->
          <div class=\\"search-icon\\">
            <i class=\\"icon-search\\"></i>
          </div>
          <button type=\\"button\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\" class=\\"navbar-toggler\\"><span class=\\"navbar-toggler-icon\\"></span></button>
        </div>
      </div>
    </nav>
    <!--0-->
    <div data-test-page-body=\\"\\">
      <section class=\\"section pt-55\\">
        <!--0-->
        <!--1-->
        <div class=\\"container-fluid\\">
          <div class=\\"row\\">
            <div class=\\"col-lg-4 col-md-6\\">
              <div class=\\"post-card\\">
                <div class=\\"post-card-content\\">
                  <a href=\\"/category/pervya/1/\\" class=\\"categorie\\">Первая</a>
                  <h5>
                    <a href=\\"/pervya-testovaya-statya\\">Первая тестовая статья</a>
                  </h5>
                  <p>Short content</p>
                  <div class=\\"post-card-info\\">
                    <ul class=\\"list-inline\\">
                      <li>среда, 25 мая 2022 г., 02:54:20</li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <!--0-->
            <!--2-->
            <div class=\\"col-lg-12\\">
              <div class=\\"pagination mt--10\\">
                <ul class=\\"list-inline\\">
                  <!--0-->
                  <li>
                    <a data-test-page=\\"1\\" href=\\"/page/1/\\" class=\\"active\\">1</a>
                  </li>
                  <!--1-->
                  <!--0-->
                  <li>
                    <a data-test-page=\\"2\\" href=\\"/page/2/\\">2</a>
                  </li>
                  <!--1-->
                  <!--0-->
                  <li>
                    <a data-test-page=\\"3\\" href=\\"/page/3/\\">3</a>
                  </li>
                  <!--1-->
                  <!--0-->
                  <li>
                    <a data-test-page=\\"4\\" href=\\"/page/4/\\">4</a>
                  </li>
                  <!--1-->
                  <!--0-->
                  <li>
                    <a data-test-page=\\"5\\" href=\\"/page/5/\\">5</a>
                  </li>
                  <!--1-->
                </ul>
              </div>
            </div>
          </div>
        </div>
      </section>
      <!--0-->
    </div>
    <!--0-->
    <!--0-->
    <!--0-->
    <!--0-->
    <!--1-->
    <footer class=\\"footer\\">
      <div class=\\"container-fluid\\">
        <div class=\\"row\\">
          <div class=\\"col-lg-12\\">
            <div class=\\"back\\">
              <a href=\\"#\\" class=\\"back-top\\">
                <i class=\\"icon-up\\"></i>
              </a>
            </div>
          </div>
        </div>
      </div>
    </footer>
    <!--2-->
    <!--3-->
    <!--0-->
    <!--0-->
    <script>
      window.data = {
        \\"0\\": {
          \\"C\\": [\\"1\\"],
          \\"N\\": [11]
        },
        \\"1\\": {
          \\"C\\": [\\"2\\", \\"6\\", \\"7\\"],
          \\"N\\": [1, 7, 9, 10]
        },
        \\"2\\": {
          \\"C\\": [\\"3\\", \\"4\\", \\"5\\"],
          \\"N\\": [0, [0, 0],
            [0, 0, 1],
            [0, 0, 2],
            [0, 0, 3],
            [0, 0, 3, 1],
            [0, 0, 3, 2],
            [0, 0, 3, 2, 0],
            [0, 0, 3, 3],
            [0, 0, 3, 3, 0]
          ]
        },
        \\"3\\": {
          \\"N\\": [0, [0, 0],
            [0, 0, 0]
          ]
        },
        \\"4\\": {
          \\"N\\": [0, [0, 0],
            [0, 0, 0],
            [0, 0, 0, 0],
            [0, 1],
            [0, 1, 0],
            [0, 1, 0, 0]
          ]
        },
        \\"5\\": {
          \\"N\\": [0, [0, 0],
            [0, 0, 0],
            [0, 0, 1]
          ]
        },
        \\"6\\": {
          \\"N\\": [8, [8, 0],
            [8, 0, 0],
            [8, 0, 0, 0],
            [8, 0, 0, 0, 0],
            [8, 0, 0, 0, 0, 0],
            [8, 0, 0, 0, 0, 0, 0]
          ]
        },
        \\"7\\": {
          \\"C\\": [\\"8\\"],
          \\"N\\": [6]
        },
        \\"8\\": {
          \\"C\\": [\\"9\\"]
        },
        \\"9\\": {
          \\"C\\": [\\"10\\"],
          \\"N\\": [5]
        },
        \\"10\\": {
          \\"O\\": {
            \\"dataLoaded\\": true,
            \\"errors\\": [],
            \\"limit\\": 20,
            \\"total\\": 100,
            \\"articles\\": [{}]
          },
          \\"C\\": [\\"11\\"],
          \\"N\\": [4]
        },
        \\"11\\": {
          \\"C\\": [\\"14\\"],
          \\"N\\": [3]
        },
        \\"14\\": {
          \\"C\\": [\\"15\\"],
          \\"N\\": [2, [2, 1]]
        },
        \\"15\\": {
          \\"C\\": [\\"16\\", \\"17\\"],
          \\"N\\": [0, [0, 0],
            [0, 1],
            [0, 2],
            [0, 2, 0],
            [0, 2, 0, 2],
            [0, 2, 0, 3]
          ]
        },
        \\"16\\": {
          \\"C\\": [\\"23\\"],
          \\"N\\": [1]
        },
        \\"17\\": {
          \\"C\\": [\\"18\\", \\"19\\", \\"20\\", \\"21\\", \\"22\\"],
          \\"N\\": [0, [0, 0]]
        },
        \\"18\\": {
          \\"N\\": [0, 1, [1, 0],
            [1, 0, 0], 2
          ]
        },
        \\"19\\": {
          \\"N\\": [3, 4, [4, 0],
            [4, 0, 0], 5
          ]
        },
        \\"20\\": {
          \\"N\\": [6, 7, [7, 0],
            [7, 0, 0], 8
          ]
        },
        \\"21\\": {
          \\"N\\": [9, 10, [10, 0],
            [10, 0, 0], 11
          ]
        },
        \\"22\\": {
          \\"N\\": [12, 13, [13, 0],
            [13, 0, 0], 14
          ]
        },
        \\"23\\": {
          \\"N\\": [0, [0, 0],
            [0, 0, 0],
            [0, 0, 0, 0],
            [0, 0, 0, 0, 0],
            [0, 0, 0, 1],
            [0, 0, 0, 1, 0],
            [0, 0, 0, 1, 0, 0],
            [0, 0, 0, 2],
            [0, 0, 0, 2, 0],
            [0, 0, 0, 3],
            [0, 0, 0, 3, 0],
            [0, 0, 0, 3, 0, 0],
            [0, 0, 0, 3, 0, 0, 0]
          ]
        },
        \\"app\\": {
          \\"C\\": [\\"0\\"],
          \\"N\\": [12]
        }
      };
    </script>
    <script src=\\"/s.min.js\\"></script>
    <script>
      System.import('/bundle.js');
    </script>
  </body>

</html>"
`;
